Fix compositor ScrollTimeline handling of writing-modes

Previously we would get writing-modes/directionality completely
wrong for composited ScrollTimelines. This CL teaches cc::ScrollTimeline
about 'reverse' axes, without exposing the concepts of writing-mode or
directionality to it.

Bug: 906115
Change-Id: Id843668956b0766469148c1ae6ad33fca582ba63
Reviewed-on: https://chromium-review.googlesource.com/c/1310567
Commit-Queue: Stephen McGruer <smcgruer@chromium.org>
Reviewed-by: Majid Valipour <majidvp@chromium.org>
Cr-Commit-Position: refs/heads/master@{#608987}
Former-commit-id: 4423736605e8c1008d5151e0fe6251845a7d1229