cc/animation/animation_host_unittest.cc
@@ -328,8 +328,9 @@ TEST_F(AnimationHostTest, LayerTreeMutatorUpdateReflectsScrollAnimations) {
 
   // Create scroll timeline that links scroll animation and worklet animation
   // together. Use timerange so that we have 1:1 time & scroll mapping.
-  auto scroll_timeline = std::make_unique<ScrollTimeline>(
-      element_id, ScrollTimeline::Vertical, base::nullopt, base::nullopt, 100);
+  auto scroll_timeline =
+      std::make_unique<ScrollTimeline>(element_id, ScrollTimeline::ScrollDown,
+                                       base::nullopt, base::nullopt, 100);
 
   // Create a worklet animation that is bound to the scroll timeline.
   scoped_refptr<WorkletAnimation> worklet_animation(
